added two new endpoints JGC
